--- a/dashboard.html
+++ b/dashboard.html
@@ -41,8 +41,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <span class="text-2xl logo-text commotion-red">COMMOTION</span>
-                    <span class="text-lg font-bold text-gray-600 ml-1">.APP</span>
+                    <span class="text-2xl logo-text commotion-red">COMMOTION.APP</span>
                 </div>
                 <div class="flex items-center space-x-4">
                     <span class="text-sm text-gray-600" id="userName">Loading...</span>
@@ -56,12 +55,33 @@
     </nav>
 
     <!-- Main Content Container -->
-    <div id="dashboardContent">
-        <!-- Content will be loaded based on role -->
+    <div id="dashboardContent" class="min-h-screen flex items-center justify-center">
+        <div class="text-center">
+            <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-red-600 mx-auto mb-4"></div>
+            <p class="text-gray-600">Loading dashboard...</p>
+        </div>
     </div>
 
     <script src="js/demo-data.js"></script>
     <script src="js/dashboard-logic.js"></script>
+    <script>
+        // Fallback if scripts don't load
+        setTimeout(function() {
+            const content = document.getElementById('dashboardContent');
+            if (content && content.innerHTML.includes('Loading dashboard')) {
+                content.innerHTML = `
+                    <div class="max-w-2xl mx-auto px-4 py-16 text-center">
+                        <i class="fas fa-exclamation-triangle text-6xl text-red-400 mb-4"></i>
+                        <h2 class="text-2xl font-bold text-gray-900 mb-2">Loading Error</h2>
+                        <p class="text-gray-600 mb-4">Dashboard scripts failed to load. Please refresh the page.</p>
+                        <button onclick="window.location.reload()" class="px-6 py-3 bg-red-600 text-white rounded-lg font-semibold hover:bg-red-700">
+                            Refresh Page
+                        </button>
+                    </div>
+                `;
+            }
+        }, 3000);
+    </script>
 
 </body>
 </html>
