--- a/gear.html
+++ b/gear.html
@@ -42,8 +42,7 @@
                     <button onclick="window.location.href='dashboard.html'" class="mr-4 text-gray-500 hover:text-gray-700">
                         <i class="fas fa-arrow-left"></i>
                     </button>
-                    <span class="text-2xl logo-text commotion-red">COMMOTION</span>
-                    <span class="text-lg font-bold text-gray-600 ml-1">.APP</span>
+                    <span class="text-2xl logo-text commotion-red">COMMOTION.APP</span>
                 </div>
                 <div class="flex items-center space-x-4">
                     <span class="text-sm text-gray-600" id="userName">Admin User</span>
