--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
     
-    <div class="glass rounded-2xl shadow-2xl max-w-md w-full p-10">
+    <div class="glass rounded-2xl shadow-2xl max-w-md w-full p-6 sm:p-10">
         <!-- Logo/Header -->
         <div class="text-center mb-10">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl logo-text mb-8 px-2">COMMOTION.APP</h1>
+            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl logo-text mb-8">COMMOTION.APP</h1>
         </div>
 
         <!-- Error Message -->
