--- a/event-detail.html
+++ b/event-detail.html
@@ -220,7 +220,7 @@
                             <div class="space-y-2">
                                 ${day.items.map(item => `
                                     <div class="flex items-start p-3 bg-gray-50 rounded-lg hover:bg-gray-100 cursor-pointer" onclick="editScheduleItem('${day.date}', '${item.time}')">
-                                        <span class="text-sm font-mono font-semibold commotion-red w-14 flex-shrink-0">${item.time}</span>
+                                        <span class="text-sm font-semibold commotion-red w-14 flex-shrink-0">${item.time}</span>
                                         <div class="flex-1 min-w-0">
                                             <p class="text-sm font-medium text-gray-900">${item.activity}</p>
                                             ${item.crew && item.crew.length > 0 ? `<p class="text-xs text-gray-500 mt-1 truncate"><i class="fas fa-users mr-1"></i>${item.crew.map(c => DEMO_DATA.crew.find(cr => cr.id === c)?.name || c).join(', ')}</p>` : ''}
@@ -257,6 +257,7 @@
                             <div class="text-sm text-gray-600 space-y-1">
                                 <p><i class="fas fa-dollar-sign w-4 text-gray-400"></i> $${crew.rate}/day</p>
                                 <p><i class="fas fa-phone w-4 text-gray-400"></i> ${crew.phone}</p>
+                                <p><i class="fas fa-envelope w-4 text-gray-400"></i> <a href="mailto:${crew.email}" class="text-blue-600 hover:underline">${crew.email}</a></p>
                             </div>
                             <button onclick="viewCrewMember('${crew.id}')" class="w-full mt-3 px-3 py-2 bg-gray-100 hover:bg-gray-200 rounded-lg text-sm font-semibold">View Profile</button>
                         </div>
@@ -331,7 +332,79 @@
         }
 
         // Action functions
-        function editEvent() { alert('Edit event (Demo mode)'); }
+        function editEvent() {
+            const modal = document.getElementById('eventModal');
+            const content = document.getElementById('eventModalContent');
+            content.innerHTML = `
+                <div class="p-6">
+                    <div class="flex justify-between items-center mb-6">
+                        <h2 class="text-xl font-bold text-gray-900"><i class="fas fa-edit mr-2 commotion-red"></i>Edit Event</h2>
+                        <button onclick="closeEventModal()" class="text-gray-400 hover:text-gray-600"><i class="fas fa-times text-xl"></i></button>
+                    </div>
+                    <form onsubmit="event.preventDefault(); saveEventChanges();" class="space-y-4">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Event Name</label>
+                            <input type="text" id="editEventName" value="${event.name}" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-red-500 focus:border-red-500">
+                        </div>
+                        <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Start Date</label>
+                                <input type="date" id="editEventStart" value="${event.startDate}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">End Date</label>
+                                <input type="date" id="editEventEnd" value="${event.endDate}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                            </div>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Location</label>
+                            <input type="text" id="editEventLocation" value="${event.location}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                        </div>
+                        <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Attendees</label>
+                                <input type="number" id="editEventAttendees" value="${event.attendees}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
+                                <select id="editEventStatus" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                                    <option value="lead" ${event.status === 'lead' ? 'selected' : ''}>Lead</option>
+                                    <option value="quote-sent" ${event.status === 'quote-sent' ? 'selected' : ''}>Quote Sent</option>
+                                    <option value="confirmed" ${event.status === 'confirmed' ? 'selected' : ''}>Confirmed</option>
+                                    <option value="in-progress" ${event.status === 'in-progress' ? 'selected' : ''}>In Progress</option>
+                                    <option value="completed" ${event.status === 'completed' ? 'selected' : ''}>Completed</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="grid grid-cols-2 gap-4">
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Quote Amount ($)</label>
+                                <input type="number" id="editEventQuote" value="${event.quoteAmount}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Paid Amount ($)</label>
+                                <input type="number" id="editEventPaid" value="${event.paidAmount}" class="w-full px-3 py-2 border border-gray-300 rounded-lg">
+                            </div>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Notes</label>
+                            <textarea id="editEventNotes" rows="3" class="w-full px-3 py-2 border border-gray-300 rounded-lg">${event.notes || ''}</textarea>
+                        </div>
+                        <div class="flex gap-3 pt-4">
+                            <button type="submit" class="flex-1 px-4 py-3 bg-commotion-red hover-commotion-red text-white rounded-lg font-semibold">Save Changes</button>
+                            <button type="button" onclick="closeEventModal()" class="px-4 py-3 bg-gray-200 hover:bg-gray-300 rounded-lg font-semibold">Cancel</button>
+                        </div>
+                    </form>
+                </div>
+            `;
+            modal.classList.remove('hidden');
+            modal.classList.add('flex');
+        }
+        
+        function saveEventChanges() {
+            alert('Changes saved! (Demo mode - data not persisted to Firebase yet)');
+            closeEventModal();
+        }
         function exportEvent() { alert('Export event data (Demo mode)'); }
         function addScheduleDay() { alert('Add schedule day (Demo mode)'); }
         function addScheduleItem() { alert('Add schedule item (Demo mode)'); }
