--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
             <div class="space-y-2 text-xs text-gray-500">
                 <div class="flex justify-between">
                     <span class="font-semibold">Admin:</span>
-                    <span>jem / <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="244e414964474b49494b504d4b4a0a575051404d4b">[email&#160;protected]</a></span>
+                    <span>jem</span>
                 </div>
                 <div class="flex justify-between">
                     <span class="font-semibold">Client:</span>
-                    <span>ethan / <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2441504c454a64564c5d504c49454a40454854570a474b0a4a5e">[email&#160;protected]</a></span>
+                    <span>ethan</span>
                 </div>
                 <div class="flex justify-between">
                     <span class="font-semibold">Crew:</span>
-                    <span>sam / <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a3d0c2cee3c0d1c6d4cec2cacf8dc0ccce">[email&#160;protected]</a></span>
+                    <span>sam</span>
                 </div>
                 <p class="text-center text-gray-400 mt-2">Password: demo123</p>
             </div>
